src/objects/Error_Message__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Error Messages</relationshipLabel>
        <relationshipName>Error_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Context__c</fullName>
        <label>Error Context</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Error Messages</relationshipLabel>
        <relationshipName>Error_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version_Number__c</fullName>
        <formula>Package_Version__r.sfLma__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Version Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipLabel>Error Messages</relationshipLabel>
        <relationshipName>Error_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>sfLma__Package__c</referenceTo>
        <relationshipLabel>Error Messages</relationshipLabel>
        <relationshipName>Error_Messages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Short_Message__c</fullName>
        <label>Short Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Package_Version__c</columns>
        <columns>Account__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Error_Context__c</columns>
        <columns>Short_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Households_2_4_2_Errors</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Short_Message__c</columns>
        <columns>Package_Version_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Package_Version_Number__c</field>
            <operation>equals</operation>
            <value>2.4.2</value>
        </filters>
        <label>Households 2.4.2 Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_Query_Errors</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Short_Message__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Org_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Package_Version_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Short_Message__c</field>
            <operation>contains</operation>
            <value>Internal</value>
        </filters>
        <label>Internal Query Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unexpected_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Account__c</columns>
        <columns>Package_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exception_Type__c</field>
            <operation>equals</operation>
            <value>UnexpectedException</value>
        </filters>
        <label>Unexpected Exceptions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Er-{0000}</displayFormat>
        <label>Error Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>